it will fix the x-axis overflow by using overflow property.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 .home {
 background-color: #e1e6e3f1;
